kubernetes/traefikee/middleware/oauth2-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
{ middleware and ingressroute configuration }
